config/console/console_init.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: console
spec:
  selector:
    matchLabels:
      app: odf-console
  replicas: 1
  template:
    metadata:
      annotations:
        openshift.io/required-scc: restricted-v2
      labels:
        app: odf-console
    spec:
      automountServiceAccountToken: false
      containers:
        - name: odf-console
          image: odf-console:latest
          resources:
            limits:
              cpu: "100m"
              memory: "512Mi"
            requests:
              cpu: "10m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /plugin-manifest.json
              port: 9001
              scheme: HTTPS
            initialDelaySeconds: 1000
            periodSeconds: 60
          ports:
            - containerPort: 9001
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: odf-console-serving-cert
              mountPath: /var/serving-cert
              readOnly: true
            - name: odf-console-nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: odf-console-nginx-log
              mountPath: /var/log/nginx
            - name: odf-console-nginx-tmp
              mountPath: /var/lib/nginx/tmp
      tolerations:
      - effect: NoSchedule
        key: node.ocs.openshift.io/storage
        operator: Equal
        value: "true"
      volumes:
        - name: odf-console-serving-cert
          secret:
            secretName: odf-console-serving-cert
        - name: odf-console-nginx-conf
          configMap:
            name: odf-console-nginx-conf
        - name: odf-console-nginx-log
          emptyDir: {}
        - name: odf-console-nginx-tmp
          emptyDir: {}
      priorityClassName: system-cluster-critical
      securityContext:
        runAsNonRoot: true
